--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,12 +1,186 @@
+$main-font: 'Montserrat', sans-serif;
+$off-white: #f9f9f9;
+$maroon: #790133;
+$orange: #F3724D;
+$purple: #31102e;
+$bg-zig-zag: url("./../assets/bg.png");
+
 *{
     padding: 0;
     margin: 0;
 }
 
-body{
-    background-color: orangered;
+#top-bg{
+    z-index: -1;
+    background: url("./../assets/main-bg.png"), linear-gradient(#31102e, $maroon, #e15a44, #f9f9f9);
+    background-size: cover;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
 }
 
-nav{
-    background-color: white;
+body{
+    background: $bg-zig-zag, $maroon;
+    font-family: $main-font;
+}
+
+p, a{
+    color: white;
+}
+
+h1,h2{
+    font-family: $main-font;
+}
+
+
+#home-container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+
+#navbar{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+
+    h1{
+        color: white;
+    }
+
+    a{  
+        font-family: $main-font;
+        margin: 20px;
+        font-size: 1.4em;
+        color: #f9f9f9;
+        text-decoration: none;
+        position: relative;
+
+        &:hover{
+            cursor: pointer;
+        }
+    
+        &:after{
+            display: block;
+            position: absolute;
+            content: "";
+            background-color: $orange;
+            bottom: -15px;
+            left: 0;
+            width: 0;
+            height: 6px;
+            transition: all 0.5s;
+            transition-timing-function: cubic-bezier(0.69, 0.38, 0.17, 1.3);
+        }
+    
+        &:hover:after{
+            width: 100%;
+        }
+
+
+    }
+
+}
+
+#title-panel{
+    margin: 0 auto;
+    font-family: $main-font;
+    color: white;
+    font-size: 2.5em;
+    margin-top: 5em;
+    max-width: 70%;
+    margin-bottom: 35vh;
+}
+
+.section-heading{
+    text-align: center;
+    color: $orange;
+    padding: 10px;
+    margin-bottom: 50px;
+    text-shadow: 3px 3px 0 #702915;
+    font-size: 3em;
+}
+
+.project-card{
+    background-color: $orange;
+    display: flex;
+    margin-bottom: 5vh;
+    border-radius: 2px;
+
+    .project-screenshot{
+        min-width: 300px;
+        height: 400px;
+        border-radius: 2px;
+        position: relative;
+        top: -20px;
+        left: -20px;
+    }
+
+    .project-info{
+        font-family: $main-font;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 20px;
+
+        
+        h2{
+            font-size: 2em;
+            color: $maroon;
+        }
+
+        .project-skills a{
+            border: 2px solid #790133;
+            border-radius: 10px;
+            padding: 5px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+        }
+
+        .project-buttons a{
+            color: #790133;
+            padding: 10px;
+            font-weight: 700;
+            position: relative;
+            z-index: 1;
+            transition: 0.1s ease in;
+            overflow: hidden;
+            border: 5px solid #790133;
+            outline: 0;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: 0.15s ease-in;
+            margin: 10px 20px 20px 0;
+
+            &:hover{
+                color: $off-white;
+                cursor: pointer;
+            }
+
+            &:before{
+                content: "";
+                bottom: 0;
+                left: 0;
+                position: absolute;
+                background-color: $maroon;
+                width: 100%;
+                height: 0;
+                z-index: -1;
+                transition: 0.15s ease-in;
+            }
+
+            &:hover:before{
+                height: 100%;
+            }
+
+        }
+
+
+    }
+
+}
+
+#about-me{
+    background-color: $purple;
 }
