--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,18 +11,18 @@ $bg-zig-zag: url("./../assets/bg.png");
 }
 
 #top-bg{
-    z-index: -1;
+    z-index: -2;
     background: url("./../assets/main-bg.png"), linear-gradient(#31102e, $maroon, #e15a44, #f9f9f9);
     background-size: cover;
     background-position: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
 }
 
 body{
-    background: $bg-zig-zag, $maroon;
     font-family: $main-font;
+    background: $bg-zig-zag, $purple;
 }
 
 p, a{
@@ -34,9 +34,18 @@ h1,h2{
 }
 
 
-#home-container{
+section{
+    background: $bg-zig-zag, $purple;
+}
+
+.section-contents{
     max-width: 1200px;
     margin: 0 auto;
+    padding: 50px;
+}
+
+.maroon{
+    background-color: $maroon;
 }
 
 
@@ -44,6 +53,8 @@ h1,h2{
     display: flex;
     justify-content: space-between;
     padding-top: 50px;
+    width: 1200px;
+    margin: 0 auto;
 
     h1{
         color: white;
@@ -88,18 +99,27 @@ h1,h2{
     font-family: $main-font;
     color: white;
     font-size: 2.5em;
-    margin-top: 5em;
-    max-width: 70%;
-    margin-bottom: 35vh;
+    max-width: 50%;
+    height: calc(100vh - 79px);
+    overflow: hidden;
+
+    h1{
+        margin-top: 20vh;
+    }
+
 }
 
 .section-heading{
     text-align: center;
     color: $orange;
-    padding: 10px;
-    margin-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 30px;
     text-shadow: 3px 3px 0 #702915;
     font-size: 3em;
+}
+
+.projects-container{
+    padding: 20px;
 }
 
 .project-card{
@@ -182,5 +202,51 @@ h1,h2{
 }
 
 #about-me{
-    background-color: $purple;
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+    
+    #my-picture{
+        min-width: 300px;
+        height:300px;
+        background: url("./../assets/me.jpeg");
+        background-size: cover;
+        margin-left: 20px;
+        border-radius: 2px;
+    }
+
+}
+
+#contact {
+    text-align: center;
+    margin-bottom: 5vh;
+
+    a{
+        text-decoration: none;
+        margin-bottom: 50px;
+        font-size: 4em;
+        color: white;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 700;
+        text-decoration: none;
+        position: relative;
+        width: 1020px;
+        margin: 0 auto;
+
+        &:after{
+            position: absolute;
+            bottom: -15px;
+            left: 0;
+            background-color: #F3724D;
+            height: 10px;
+            width: 0;
+            content: "";
+            transition: all 0.7s;
+            transition-timing-function: cubic-bezier(0.69, 0.38, 0.17, 1.3);
+        }
+
+        &:hover:after{
+            width: 100%;
+        }        
+    }
 }
