--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -42,6 +42,12 @@ section{
     max-width: 1200px;
     margin: 0 auto;
     padding: 50px;
+
+    @media screen and (max-width: 500px){
+        max-width: 400px;
+        
+    }
+
 }
 
 .maroon{
@@ -60,8 +66,17 @@ section{
         width:800px;        
     }
 
+    @media screen and (max-width: 500px){
+        width: 375px;
+        
+    }
+
     h1{
         color: white;
+
+        @media screen and (max-width: 500px){
+            display: none;
+        }
     }
 
     a{  
@@ -71,6 +86,10 @@ section{
         color: #f9f9f9;
         text-decoration: none;
         position: relative;
+
+        @media screen and (max-width: 500px){
+                        
+        }
 
         &:hover{
             cursor: pointer;
@@ -108,13 +127,19 @@ section{
     overflow: hidden;
 
     @media screen and (max-width: 1550px){
-
         font-size: 2em;
+        max-width: 80%;
 
     }
 
+    @media screen and (max-width: 500px){
+        font-size: 1.1em;
+        max-width: 80%;        
+        height: calc(100vh - 78px);        
+    }
+
     h1{
-        margin-top: 20vh;
+        margin-top: 25vh;
     }
 
 }
@@ -126,6 +151,12 @@ section{
     padding-bottom: 30px;
     text-shadow: 3px 3px 0 #702915;
     font-size: 3em;
+
+    @media screen and (max-width: 500px){
+        padding-bottom: 0px;        
+        
+    }
+
 }
 
 .projects-container{
@@ -145,6 +176,12 @@ section{
         position: relative;
         top: -20px;
         left: -20px;
+
+        @media screen and (max-width: 500px){
+            
+            display: none;    
+            
+        }
     }
 
     .project-info{
@@ -154,19 +191,54 @@ section{
         justify-content: space-around;
         padding: 20px;
 
+        @media screen and (max-width: 500px){
+            
+            
+        }
+
         
         h2{
             font-size: 2em;
             color: $maroon;
+
+            @media screen and (max-width: 500px){
+                
+                margin-bottom: 10px;       
+                   
+            }
         }
 
-        .project-skills a{
-            border: 2px solid #790133;
-            border-radius: 10px;
-            padding: 5px;
-            margin-right: 10px;
-            margin-bottom: 10px;
+        p{
+            @media screen and (max-width: 500px){
+                
+                margin-bottom: 20px;       
+                   
+            }
+
         }
+
+        .project-skills{
+
+            @media screen and (max-width: 500px){
+            }
+
+            a{
+                border: 2px solid #790133;
+                border-radius: 10px;
+                padding: 5px;
+                margin-right: 10px;
+                margin-bottom: 10px; 
+
+                @media screen and (max-width: 500px){
+                    
+                    display: inline-flex;
+                    justify-content: center;
+                    margin-bottom: 10px; 
+                       
+                }
+            }      
+           
+    }
 
         .project-buttons a{
             color: #790133;
@@ -204,6 +276,13 @@ section{
                 height: 100%;
             }
 
+            @media screen and (max-width: 500px){
+                display: block;
+                margin-bottom: 0px; 
+                text-align: center;
+                   
+            }
+
         }
 
 
@@ -215,6 +294,15 @@ section{
     width: 800px;
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 500px){
+        width: 275px;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+           
+    }
+    
     
     #my-picture{
         min-width: 300px;
@@ -223,6 +311,14 @@ section{
         background-size: cover;
         margin-left: 20px;
         border-radius: 2px;
+
+        @media screen and (max-width: 500px){
+            min-width: 275px;
+            height: 275px;
+            margin-left: 0;
+            margin-top: 20px;
+               
+        }
     }
 
 }
@@ -230,6 +326,10 @@ section{
 #contact {
     text-align: center;
     margin-bottom: 5vh;
+
+    @media screen and (max-width: 500px){
+        margin-bottom: 0;          
+    }
 
     a{
         text-decoration: none;
@@ -242,6 +342,13 @@ section{
         position: relative;
         width: 1020px;
         margin: 0 auto;
+
+        @media screen and (max-width: 500px){
+            width: 600px;
+            font-size: 1.2em;  
+            margin-bottom: 0;          
+        }
+        
 
         &:after{
             position: absolute;
