--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,7 +12,7 @@ $bg-zig-zag: url("./../assets/bg.png");
 
 #top-bg{
     z-index: -2;
-    background: url("./../assets/main-bg.png"), linear-gradient(#31102e, $maroon, #e15a44, #f9f9f9);
+    background: linear-gradient(#31102e, $maroon, #e15a44, #f9f9f9);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -121,10 +121,26 @@ section{
     margin: 0 auto;
     font-family: $main-font;
     color: white;
-    font-size: 2.5em;
-    max-width: 50%;
+    font-size: 2em;
+    max-width: 1200px;
     height: calc(100vh - 79px);
     overflow: hidden;
+    display: flex;
+
+    svg{
+        width: 500px;
+        margin-top: 100px;
+
+        @media screen and (max-width: 1600px) {
+            width: 450px;  
+            margin-top: 150px;            
+        }
+
+        @media screen and (max-width: 1400px) {
+            width: 400px;  
+            margin-top: 200px;            
+        }
+    }
 
     @media screen and (max-width: 1550px){
         font-size: 2em;
@@ -142,6 +158,17 @@ section{
         margin-top: 25vh;
     }
 
+}
+
+@keyframes flash {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+  } 
+
+
+#cursor{
+   animation: flash linear 1s infinite;
 }
 
 .section-heading{
