--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -44,8 +44,13 @@ section{
     padding: 50px;
 
     @media screen and (max-width: 500px){
-        max-width: 400px;
-        
+        max-width: 400px; 
+        padding: 20px; 
+    }
+
+    @media screen and (max-width: 360px){
+        max-width: 80%x;
+        padding: 10px;  
     }
 
 }
@@ -61,14 +66,20 @@ section{
     padding-top: 50px;
     width: 1200px;
     margin: 0 auto;
+    align-items: center;
 
     @media screen and (max-width: 1600px) {
         width:800px;        
     }
 
     @media screen and (max-width: 500px){
-        width: 375px;
-        
+        max-width: 80%;
+        padding-top: 30px;        
+    }
+
+    @media screen and (max-width: 360px){
+        max-width: 80%;
+        padding-top: 20px;        
     }
 
     h1{
@@ -77,6 +88,10 @@ section{
         @media screen and (max-width: 500px){
             display: none;
         }
+    }
+
+    svg{
+        height: 50px;
     }
 
     a{  
@@ -88,7 +103,18 @@ section{
         position: relative;
 
         @media screen and (max-width: 500px){
-                        
+            margin: 5px;
+            font-size: 1.2em;
+        }
+
+        @media screen and (max-width: 360px) {
+            margin: 5px;            
+            font-size: 1.1em;
+        }
+
+        @media screen and (max-width: 340px) {
+            margin: 5px;            
+            font-size: 0.9em;
         }
 
         &:hover{
@@ -123,22 +149,63 @@ section{
     color: white;
     font-size: 2em;
     max-width: 1200px;
-    height: calc(100vh - 79px);
+    height: calc(100vh - 104px);
     overflow: hidden;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+    h1{
+        margin-top: -104px;
+
+        @media screen and (max-width: 500px) {
+            margin-top: 0px;
+        }
+
+        @media screen and (max-width: 360px) {
+            margin-top: 0px;
+            font-size: 1.7em;
+        }
+    }
 
     svg{
         width: 500px;
-        margin-top: 100px;
+        margin-top: -104px;
 
         @media screen and (max-width: 1600px) {
             width: 450px;  
-            margin-top: 150px;            
+            margin-top: 150px;           
         }
 
         @media screen and (max-width: 1400px) {
             width: 400px;  
             margin-top: 200px;            
+        }
+
+        @media screen and (max-width: 500px) {
+            width: 200px;  
+            margin-top: 0px;
+        }
+
+        @media screen and (max-width: 360px) {
+            width: 180px;  
+            margin-top: 0px;
+        }
+    }
+
+    #mobile-spacer{
+        height: 50px;
+        width: 100%;
+        display: none;
+
+        @media screen and (max-width: 500px) {
+            display: block;
+        }
+
+        @media screen and (max-width: 360px) {
+            height: 25px;
+            display: block;
         }
     }
 
@@ -148,15 +215,25 @@ section{
 
     }
 
+
     @media screen and (max-width: 500px){
         font-size: 1.1em;
         max-width: 80%;        
-        height: calc(100vh - 78px);        
+        height: calc(100vh - 84px);
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
     }
 
-    h1{
-        margin-top: 25vh;
+    @media screen and (max-width: 360px){
+        font-size: 1.1em;
+        max-width: 80%;        
+        height: calc(100vh - 74px);
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
     }
+
 
 }
 
@@ -188,6 +265,7 @@ section{
 
 .projects-container{
     padding: 20px;
+
 }
 
 .project-card{
@@ -323,7 +401,7 @@ section{
     justify-content: space-between;
 
     @media screen and (max-width: 500px){
-        width: 275px;
+        width: 70%;
         flex-direction: column;
         justify-content: center;
         padding: 20px;
@@ -342,6 +420,14 @@ section{
         @media screen and (max-width: 500px){
             min-width: 275px;
             height: 275px;
+            margin-left: 0;
+            margin-top: 20px;
+               
+        }
+
+        @media screen and (max-width: 360px){
+            min-width: 225px;
+            height: 225px;
             margin-left: 0;
             margin-top: 20px;
                
@@ -371,9 +457,21 @@ section{
         margin: 0 auto;
 
         @media screen and (max-width: 500px){
-            width: 600px;
+            width: 80%;
+            font-size: 1.4em;  
+            margin-bottom: 50px;          
+        }
+
+        @media screen and (max-width: 400px){
+            width: 80%;
             font-size: 1.2em;  
-            margin-bottom: 0;          
+            margin-bottom: 50px;          
+        }
+
+        @media screen and (max-width: 360px) {
+            width: 80%;
+            font-size: 1em;  
+            margin-bottom: 50px;                      
         }
         
 
