--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -69,7 +69,7 @@ section{
     align-items: center;
 
     @media screen and (max-width: 1600px) {
-        width:800px;        
+        width: 1200px;        
     }
 
     @media screen and (max-width: 500px){
@@ -159,32 +159,39 @@ section{
     h1{
         margin-top: -104px;
 
+        @media screen and (max-width: 1600px) {
+            font-size: 1.8em;
+        }
+
+        @media screen and (max-width: 1400px) {
+            font-size: 1.8em;
+        }
+
         @media screen and (max-width: 500px) {
             margin-top: 0px;
         }
 
         @media screen and (max-width: 360px) {
             margin-top: 0px;
-            font-size: 1.7em;
+            font-size: 1.5em;
         }
     }
 
     svg{
         width: 500px;
         margin-top: -104px;
+        padding-bottom: 100px;
 
         @media screen and (max-width: 1600px) {
             width: 450px;  
-            margin-top: 150px;           
         }
 
         @media screen and (max-width: 1400px) {
             width: 400px;  
-            margin-top: 200px;            
         }
 
         @media screen and (max-width: 500px) {
-            width: 200px;  
+            width: 225px;  
             margin-top: 0px;
         }
 
@@ -441,8 +448,9 @@ section{
     margin-bottom: 5vh;
 
     @media screen and (max-width: 500px){
-        margin-bottom: 0;          
+        margin-bottom: 50px;          
     }
+
 
     a{
         text-decoration: none;
@@ -459,19 +467,16 @@ section{
         @media screen and (max-width: 500px){
             width: 80%;
             font-size: 1.4em;  
-            margin-bottom: 50px;          
         }
 
         @media screen and (max-width: 400px){
             width: 80%;
             font-size: 1.2em;  
-            margin-bottom: 50px;          
         }
 
         @media screen and (max-width: 360px) {
             width: 80%;
             font-size: 1em;  
-            margin-bottom: 50px;                      
         }
         
 
