--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,499 +1,9 @@
-$main-font: 'Montserrat', sans-serif;
-$off-white: #f9f9f9;
-$maroon: #790133;
-$orange: #F3724D;
-$purple: #31102e;
-$bg-zig-zag: url("./../assets/bg.png");
-
-*{
-    padding: 0;
-    margin: 0;
-}
-
-#top-bg{
-    z-index: -2;
-    background: linear-gradient(#31102e, $maroon, #e15a44, #f9f9f9);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
-body{
-    font-family: $main-font;
-    background: $bg-zig-zag, $purple;
-}
-
-p, a{
-    color: white;
-}
-
-h1,h2{
-    font-family: $main-font;
-}
-
-
-section{
-    background: $bg-zig-zag, $purple;
-}
-
-.section-contents{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 50px;
-
-    @media screen and (max-width: 500px){
-        max-width: 400px; 
-        padding: 20px; 
-    }
-
-    @media screen and (max-width: 360px){
-        max-width: 80%x;
-        padding: 10px;  
-    }
-
-}
-
-.maroon{
-    background-color: $maroon;
-}
-
-
-#navbar{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 50px;
-    width: 1200px;
-    margin: 0 auto;
-    align-items: center;
-
-    @media screen and (max-width: 1600px) {
-        width: 1200px;        
-    }
-
-    @media screen and (max-width: 500px){
-        max-width: 80%;
-        padding-top: 30px;        
-    }
-
-    @media screen and (max-width: 360px){
-        max-width: 80%;
-        padding-top: 20px;        
-    }
-
-    h1{
-        color: white;
-
-        @media screen and (max-width: 500px){
-            display: none;
-        }
-    }
-
-    svg{
-        height: 50px;
-    }
-
-    a{  
-        font-family: $main-font;
-        margin: 20px;
-        font-size: 1.4em;
-        color: #f9f9f9;
-        text-decoration: none;
-        position: relative;
-
-        @media screen and (max-width: 500px){
-            margin: 5px;
-            font-size: 1.2em;
-        }
-
-        @media screen and (max-width: 360px) {
-            margin: 5px;            
-            font-size: 1.1em;
-        }
-
-        @media screen and (max-width: 340px) {
-            margin: 5px;            
-            font-size: 0.9em;
-        }
-
-        &:hover{
-            cursor: pointer;
-        }
-    
-        &:after{
-            display: block;
-            position: absolute;
-            content: "";
-            background-color: $orange;
-            bottom: -15px;
-            left: 0;
-            width: 0;
-            height: 6px;
-            transition: all 0.5s;
-            transition-timing-function: cubic-bezier(0.69, 0.38, 0.17, 1.3);
-        }
-    
-        &:hover:after{
-            width: 100%;
-        }
-
-
-    }
-
-}
-
-#title-panel{
-    margin: 0 auto;
-    font-family: $main-font;
-    color: white;
-    font-size: 2em;
-    max-width: 1200px;
-    height: calc(100vh - 104px);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-    h1{
-        margin-top: -104px;
-
-        @media screen and (max-width: 1600px) {
-            font-size: 1.8em;
-        }
-
-        @media screen and (max-width: 1400px) {
-            font-size: 1.8em;
-        }
-
-        @media screen and (max-width: 500px) {
-            margin-top: 0px;
-        }
-
-        @media screen and (max-width: 360px) {
-            margin-top: 0px;
-            font-size: 1.5em;
-        }
-    }
-
-    svg{
-        width: 500px;
-        margin-top: -104px;
-        padding-bottom: 100px;
-
-        @media screen and (max-width: 1600px) {
-            width: 450px;  
-        }
-
-        @media screen and (max-width: 1400px) {
-            width: 400px;  
-        }
-
-        @media screen and (max-width: 500px) {
-            width: 225px;  
-            margin-top: 0px;
-        }
-
-        @media screen and (max-width: 360px) {
-            width: 180px;  
-            margin-top: 0px;
-        }
-    }
-
-    #mobile-spacer{
-        height: 50px;
-        width: 100%;
-        display: none;
-
-        @media screen and (max-width: 500px) {
-            display: block;
-        }
-
-        @media screen and (max-width: 360px) {
-            height: 25px;
-            display: block;
-        }
-    }
-
-    @media screen and (max-width: 1550px){
-        font-size: 2em;
-        max-width: 80%;
-
-    }
-
-
-    @media screen and (max-width: 500px){
-        font-size: 1.1em;
-        max-width: 80%;        
-        height: calc(100vh - 84px);
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    @media screen and (max-width: 360px){
-        font-size: 1.1em;
-        max-width: 80%;        
-        height: calc(100vh - 74px);
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-
-}
-
-@keyframes flash {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
-  } 
-
-
-#cursor{
-   animation: flash linear 1s infinite;
-}
-
-.section-heading{
-    text-align: center;
-    color: $orange;
-    padding-top: 40px;
-    padding-bottom: 30px;
-    text-shadow: 3px 3px 0 #702915;
-    font-size: 3em;
-
-    @media screen and (max-width: 500px){
-        padding-bottom: 0px;        
-        
-    }
-
-}
-
-.projects-container{
-    padding: 20px;
-
-}
-
-.project-card{
-    background-color: $orange;
-    display: flex;
-    margin-bottom: 5vh;
-    border-radius: 2px;
-
-    .project-screenshot{
-        min-width: 300px;
-        height: 400px;
-        border-radius: 2px;
-        position: relative;
-        top: -20px;
-        left: -20px;
-
-        @media screen and (max-width: 500px){
-            
-            display: none;    
-            
-        }
-    }
-
-    .project-info{
-        font-family: $main-font;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 20px;
-
-        @media screen and (max-width: 500px){
-            
-            
-        }
-
-        
-        h2{
-            font-size: 2em;
-            color: $maroon;
-
-            @media screen and (max-width: 500px){
-                
-                margin-bottom: 10px;       
-                   
-            }
-        }
-
-        p{
-            @media screen and (max-width: 500px){
-                
-                margin-bottom: 20px;       
-                   
-            }
-
-        }
-
-        .project-skills{
-
-            @media screen and (max-width: 500px){
-            }
-
-            a{
-                border: 2px solid #790133;
-                border-radius: 10px;
-                padding: 5px;
-                margin-right: 10px;
-                margin-bottom: 10px; 
-
-                @media screen and (max-width: 500px){
-                    
-                    display: inline-flex;
-                    justify-content: center;
-                    margin-bottom: 10px; 
-                       
-                }
-            }      
-           
-    }
-
-        .project-buttons a{
-            color: #790133;
-            padding: 10px;
-            font-weight: 700;
-            position: relative;
-            z-index: 1;
-            transition: 0.1s ease in;
-            overflow: hidden;
-            border: 5px solid #790133;
-            outline: 0;
-            text-decoration: none;
-            text-transform: uppercase;
-            transition: 0.15s ease-in;
-            margin: 10px 20px 20px 0;
-
-            &:hover{
-                color: $off-white;
-                cursor: pointer;
-            }
-
-            &:before{
-                content: "";
-                bottom: 0;
-                left: 0;
-                position: absolute;
-                background-color: $maroon;
-                width: 100%;
-                height: 0;
-                z-index: -1;
-                transition: 0.15s ease-in;
-            }
-
-            &:hover:before{
-                height: 100%;
-            }
-
-            @media screen and (max-width: 500px){
-                display: block;
-                margin-bottom: 0px; 
-                text-align: center;
-                   
-            }
-
-        }
-
-
-    }
-
-}
-
-#about-me{
-    width: 800px;
-    display: flex;
-    justify-content: space-between;
-
-    @media screen and (max-width: 500px){
-        width: 70%;
-        flex-direction: column;
-        justify-content: center;
-        padding: 20px;
-           
-    }
-    
-    
-    #my-picture{
-        min-width: 300px;
-        height:300px;
-        background: url("./../assets/me.jpeg");
-        background-size: cover;
-        margin-left: 20px;
-        border-radius: 2px;
-
-        @media screen and (max-width: 500px){
-            min-width: 275px;
-            height: 275px;
-            margin-left: 0;
-            margin-top: 20px;
-               
-        }
-
-        @media screen and (max-width: 360px){
-            min-width: 225px;
-            height: 225px;
-            margin-left: 0;
-            margin-top: 20px;
-               
-        }
-    }
-
-}
-
-#contact {
-    text-align: center;
-    margin-bottom: 5vh;
-
-    @media screen and (max-width: 500px){
-        margin-bottom: 50px;          
-    }
-
-
-    a{
-        text-decoration: none;
-        margin-bottom: 50px;
-        font-size: 4em;
-        color: white;
-        font-family: "Montserrat", sans-serif;
-        font-weight: 700;
-        text-decoration: none;
-        position: relative;
-        width: 1020px;
-        margin: 0 auto;
-
-        @media screen and (max-width: 500px){
-            width: 80%;
-            font-size: 1.4em;  
-        }
-
-        @media screen and (max-width: 400px){
-            width: 80%;
-            font-size: 1.2em;  
-        }
-
-        @media screen and (max-width: 360px) {
-            width: 80%;
-            font-size: 1em;  
-        }
-        
-
-        &:after{
-            position: absolute;
-            bottom: -15px;
-            left: 0;
-            background-color: #F3724D;
-            height: 10px;
-            width: 0;
-            content: "";
-            transition: all 0.7s;
-            transition-timing-function: cubic-bezier(0.69, 0.38, 0.17, 1.3);
-        }
-
-        &:hover:after{
-            width: 100%;
-        }        
-    }
-}
+//Partials
+@import "partials/base";
+@import "partials/navbar";
+@import "partials/colors";
+@import "partials/sections";
+@import "partials/titlepanel";
+@import "partials/projects";
+@import "partials/aboutme";
+@import "partials/contactme";
