--- a/src/css/partials/_contactme.scss
+++ b/src/css/partials/_contactme.scss
@@ -1,7 +1,7 @@
 
 #contact {
     text-align: center;
-    margin-bottom: 5vh;
+
 
     @media screen and (max-width: 500px){
         margin-bottom: 50px;          
@@ -19,6 +19,10 @@
         position: relative;
         width: 1020px;
         margin: 0 auto;
+
+        @include iPad{
+            font-size: 2em;
+        }
 
         @media screen and (max-width: 500px){
             width: 80%;
