--- a/src/css/partials/_projects.scss
+++ b/src/css/partials/_projects.scss
@@ -7,16 +7,20 @@
 .project-card{
     background-color: $orange;
     display: flex;
-    margin-bottom: 5vh;
+    margin-bottom: 50px;
     border-radius: 2px;
+
+    @include iPad{
+    }
 
     .project-screenshot{
         min-width: 300px;
-        height: 400px;
         border-radius: 2px;
-        position: relative;
-        top: -20px;
+        -webkit-clip-path: polygon(0% 0%, 85% 0, 100% 50%, 85% 100%, 0% 100%);
+        clip-path: polygon(0% 0%, 85% 0, 100% 50%, 85% 100%, 0% 100%);
         left: -20px;
+        top: -20px;
+        position: relative;
 
         @media screen and (max-width: 500px){
             
@@ -29,18 +33,21 @@
         font-family: $main-font;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        box-sizing: border-box;
         padding: 20px;
 
-        @media screen and (max-width: 500px){
-            
-            
+
+        @include iPad{
+
         }
 
         
         h2{
             font-size: 2em;
             color: $maroon;
+            margin-bottom: 20px;
+
+
 
             @media screen and (max-width: 500px){
                 
@@ -50,6 +57,9 @@
         }
 
         p{
+
+            margin-bottom: 20px;
+
             @media screen and (max-width: 500px){
                 
                 margin-bottom: 20px;       
@@ -60,7 +70,13 @@
 
         .project-skills{
 
-            @media screen and (max-width: 500px){
+            margin-bottom: 40px;
+            display: flex;
+            flex-wrap: wrap;
+
+            @include iPad{
+                display: flex;
+                flex-wrap: wrap;
             }
 
             a{
@@ -81,52 +97,62 @@
            
     }
 
-        .project-buttons a{
-            color: #790133;
-            padding: 10px;
-            font-weight: 700;
-            position: relative;
-            z-index: 1;
-            transition: 0.1s ease in;
-            overflow: hidden;
-            border: 5px solid #790133;
-            outline: 0;
-            text-decoration: none;
-            text-transform: uppercase;
-            transition: 0.15s ease-in;
-            margin: 10px 20px 20px 0;
+        .project-buttons{
 
-            &:hover{
-                color: $off-white;
-                cursor: pointer;
-            }
+            margin-bottom: 20px;
 
-            &:before{
-                content: "";
-                bottom: 0;
-                left: 0;
-                position: absolute;
-                background-color: $maroon;
-                width: 100%;
-                height: 0;
-                z-index: -1;
+            a{
+                color: #790133;
+                padding: 10px;
+                font-weight: 700;
+                position: relative;
+                z-index: 1;
+                transition: 0.1s ease in;
+                overflow: hidden;
+                border: 5px solid #790133;
+                outline: 0;
+                text-decoration: none;
+                text-transform: uppercase;
                 transition: 0.15s ease-in;
+                margin: 10px 20px 20px 0;
+
+                &:hover{
+                    color: $off-white;
+                    cursor: pointer;
+                }
+
+                &:before{
+                    content: "";
+                    bottom: 0;
+                    left: 0;
+                    position: absolute;
+                    background-color: $maroon;
+                    width: 100%;
+                    height: 0;
+                    z-index: -1;
+                    transition: 0.15s ease-in;
+                }
+
+                &:hover:before{
+                    height: 100%;
+                }
+
+                @media screen and (max-width: 500px){
+                    display: block;
+                    margin-bottom: 0px; 
+                    text-align: center;
+                    
+                }
+
             }
 
-            &:hover:before{
-                height: 100%;
-            }
-
-            @media screen and (max-width: 500px){
-                display: block;
-                margin-bottom: 0px; 
-                text-align: center;
-                   
+            svg{
+                display: inline-block;
+                vertical-align: bottom;
+                margin-left: 5px;
             }
 
         }
-
-
     }
 
 }
