--- a/src/css/partials/_sections.scss
+++ b/src/css/partials/_sections.scss
@@ -7,6 +7,11 @@ section{
     margin: 0 auto;
     padding: 50px;
 
+    @include iPad{
+        max-width: 700px;
+
+    }
+
     @media screen and (max-width: 500px){
         max-width: 400px; 
         padding: 20px; 
