--- a/src/css/partials/_titlepanel.scss
+++ b/src/css/partials/_titlepanel.scss
@@ -19,10 +19,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    box-sizing: border-box;
+
+    @include iPad{
+        flex-direction: column;
+
+        h1{
+            padding-top: 120px;
+        }
+    }
+
+    @include iPad-landscape{
+        flex-direction: row;
+         
+    }
+
+  
 
     h1{
         margin-top: -104px;
+
+
 
         @media screen and (max-width: 1600px) {
             font-size: 1.8em;
@@ -40,11 +57,14 @@
             margin-top: 0px;
             font-size: 1.5em;
         }
+
+        @include iPad-landscape{
+            font-size: 1.5em;
+        }
     }
 
     svg{
         width: 500px;
-        // margin-top: -104px;
         padding-bottom: 100px;
 
         @media screen and (max-width: 1600px) {
@@ -63,6 +83,10 @@
         @media screen and (max-width: 360px) {
             width: 180px;  
             margin-top: 0px;
+        }
+        
+        @include iPad-landscape{
+            width: 380px; 
         }
     }
 
