--- a/src/css/partials/_aboutme.scss
+++ b/src/css/partials/_aboutme.scss
@@ -3,6 +3,13 @@
     width: 800px;
     display: flex;
     justify-content: space-between;
+    font-size: 1.4em;
+
+    p{
+        display: flex;
+        align-items: center;
+
+    }
 
     @include iPad{
         width: 600px;
@@ -18,6 +25,10 @@
         flex-direction: column;
         justify-content: center;
         padding: 20px;
+
+        p{
+            font-size: 0.8em;
+        }
            
     }
     
