--- a/src/css/partials/_contactme.scss
+++ b/src/css/partials/_contactme.scss
@@ -1,10 +1,10 @@
 
-#contact {
+#contact-section {
     text-align: center;
-
+    padding-bottom: 100px;
 
     @media screen and (max-width: 500px){
-        margin-bottom: 50px;          
+        padding-bottom: 50px;          
     }
 
 
